--- a/app/src/main/res/layout/activity_main_logout.xml
+++ b/app/src/main/res/layout/activity_main_logout.xml
@@ -21,26 +21,29 @@
         android:textColorHint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fullName"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/fullName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="396dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="2dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Full Name"
-        android:textColorHighlight="@color/black"
+        android:textColorHighlight="@color/teal_200"
         android:textColorHint="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/email"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.539" />
 
     <EditText
         android:id="@+id/passwordRegister"
@@ -65,7 +68,7 @@
     <Button
         android:id="@+id/registerBtn"
         android:layout_width="wrap_content"
-        android:layout_height="38dp"
+        android:layout_height="58dp"
         android:layout_gravity="start"
         android:layout_marginTop="22dp"
         android:layout_marginBottom="88dp"
@@ -134,8 +137,8 @@
 
     <EditText
         android:id="@+id/phoneNumber"
-        android:layout_width="362dp"
-        android:layout_height="40dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:ems="10"
@@ -160,19 +163,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/registerBtn"
-        app:layout_constraintVertical_bias="0.333"
+        app:layout_constraintVertical_bias="0.0"
         tools:visibility="invisible" />
 
     <TextView
         android:id="@+id/textLogin"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="22dp"
         android:text="@string/have_account"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBarRegister" />
+        app:layout_constraintTop_toBottomOf="@+id/progressBarRegister"
+        app:layout_constraintVertical_bias="0.256" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
