--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,11 +34,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/buttonPlus"
         tools:fastScrollAlwaysVisible="true" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonPlus"
         android:layout_width="40dp"
         android:layout_height="46dp"
         android:layout_marginTop="12dp"
