--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,34 +9,24 @@
     tools:layout_editor_absoluteY="81dp">
 
 
-    <ListView
-        android:id="@+id/listData"
-        android:layout_width="377dp"
-        android:layout_height="419dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonPlus"
-        tools:fastScrollAlwaysVisible="true" />
-
     <Button
         android:id="@+id/buttonPlus"
-        android:layout_width="75dp"
-        android:layout_height="40dp"
+        android:layout_width="54dp"
+        android:layout_height="37dp"
+        android:layout_marginBottom="21dp"
         android:text="+"
         app:backgroundTint="@color/purple_200"
         app:layout_constraintBottom_toTopOf="@+id/listData"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="121dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="472dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/berkshire_swash"
         android:text="list of offers"
         android:textAllCaps="false"
@@ -44,20 +34,32 @@
         android:textColor="@color/black"
         android:textSize="24sp"
         android:typeface="sans"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="146dp"
-        android:layout_height="82dp"
-        android:layout_marginTop="4dp"
+        android:layout_width="168dp"
+        android:layout_height="69dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/aa" />
+
+    <ListView
+        android:id="@+id/listData"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="29dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonPlus"
+        tools:fastScrollAlwaysVisible="true" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
