--- a/app/src/main/res/layout/add_dialog.xml
+++ b/app/src/main/res/layout/add_dialog.xml
@@ -9,15 +9,15 @@
     tools:layout_editor_absoluteY="81dp">
 
     <LinearLayout
-        android:layout_width="382dp"
-        android:layout_height="221dp"
+        android:layout_width="350dp"
+        android:layout_height="298dp"
         android:layout_marginTop="10dp"
         android:orientation="vertical"
         android:weightSum="100">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="35dp">
+            android:layout_height="40dp">
 
             <TextView
                 android:id="@+id/labelAdresseDepart"
@@ -29,19 +29,20 @@
 
             <EditText
                 android:id="@+id/adresseDepart"
-                android:layout_width="193dp"
-                android:layout_height="match_parent"
+                android:layout_width="150dp"
+                android:layout_height="41dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="2dp"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Name" />
+                 />
+
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="28dp">
+            android:layout_height="40dp">
 
             <TextView
                 android:id="@+id/labelHeureDepart"
@@ -49,115 +50,118 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
                 android:gravity="center|right"
-                android:text="Heure de depart : " />
+                android:text="Date et Heure de depart : " />
 
             <EditText
                 android:id="@+id/heureDepart"
-                android:layout_width="193dp"
-                android:layout_height="match_parent"
+                android:layout_width="150dp"
+                android:layout_height="39dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="2dp"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Name" />
+                android:inputType="datetime" />
         </LinearLayout>
 
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/labeLadresseDestination"
                 android:layout_width="150dp"
-                android:layout_height="30dp"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
                 android:gravity="center|right"
                 android:text="Adresse destination : " />
 
-            <TextView
+            <EditText
                 android:id="@+id/adresseDestination"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_below="@+id/labeLadresseDestination"
+                android:layout_width="150dp"
+                android:layout_height="39dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:gravity="center|left"
-                android:text="adresse destination" />
+                android:layout_marginTop="2dp"
+                android:ems="10"
+                android:inputType="textPersonName" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/labelNombrePlace"
                 android:layout_width="150dp"
-                android:layout_height="30dp"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
                 android:gravity="center|right"
                 android:text="Nombre de place : " />
 
-            <TextView
+
+            <EditText
                 android:id="@+id/nombrePlace"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_below="@+id/labelNombrePlace"
+                android:layout_width="150dp"
+                android:layout_height="39dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:gravity="center|left"
-                android:text="nombre de place" />
+                android:layout_marginTop="2dp"
+                android:ems="10"
+                android:inputType="numberDecimal"/>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/labeLprix"
                 android:layout_width="150dp"
-                android:layout_height="30dp"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
                 android:gravity="center|right"
                 android:text="Prix : " />
 
-            <TextView
+
+            <EditText
                 android:id="@+id/prix"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_below="@+id/labeLprix"
+                android:layout_width="150dp"
+                android:layout_height="39dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:gravity="center|left"
-                android:text="prix" />
+                android:layout_marginTop="2dp"
+                android:ems="10"
+                android:inputType="numberDecimal" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/labelTelephone"
                 android:layout_width="150dp"
-                android:layout_height="30dp"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
                 android:gravity="center|right"
                 android:text="Numero de telephone : " />
 
-            <TextView
+            <EditText
                 android:id="@+id/telephone"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_below="@+id/labelTelephone"
+                android:layout_width="150dp"
+                android:layout_height="39dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:gravity="center|left"
-                android:text="numero de telephone" />
+                android:layout_marginTop="2dp"
+                android:ems="10"
+                android:inputType="numberDecimal" />
         </LinearLayout>
+
+        <Button
+            android:id="@+id/btnSave"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Save" />
 
 
     </LinearLayout>
