--- a/app/src/main/res/layout/activity_main_logout.xml
+++ b/app/src/main/res/layout/activity_main_logout.xml
@@ -36,7 +36,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Full Name"
-        android:textColorHighlight="@color/teal_200"
+        android:textColorHighlight="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
